--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body {
   }
 .header .navbar{
     background-color: #222222;
-    height: 80px;
 }
 .nav-item.active {
     border-bottom: 6px solid #00d9b5;
@@ -162,4 +161,10 @@ body {
     font-size: 18px;
     font-weight: 500;
     color:#373737;
+}
+
+@media (min-width: 768px) {
+    .header .navbar{
+        height: 80px;
+    }
 }
