--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,104 @@
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: italic;
+    font-weight: 100;
+    font-display: swap;
+    src: local('GE-Snd-Book Thin Italic'), local('GE-Snd-Book-ThinItalic'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: italic;
+    font-weight: 300;
+    font-display: swap;
+    src: local('GE-Snd-Book Light Italic'), local('GE-Snd-Book-LightItalic'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+  
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: italic;
+    font-weight: 400;
+    font-display: swap;
+    src: local('GE-Snd-Book Italic'), local('GE-Snd-Book-Italic'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: italic;
+    font-weight: 500;
+    font-display: swap;
+    src: local('GE-Snd-Book Medium Italic'), local('GE-Snd-Book-MediumItalic'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: italic;
+    font-weight: 700;
+    font-display: swap;
+    src: local('GE-Snd-Book Bold Italic'), local('GE-Snd-Book-BoldItalic'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: italic;
+    font-weight: 900;
+    font-display: swap;
+    src: local('GE-Snd-Book Black Italic'), local('GE-Snd-Book-BlackItalic'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: normal;
+    font-weight: 100;
+    font-display: swap;
+    src: local('GE-Snd-Book Thin'), local('GE-Snd-Book-Thin'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: local('GE-Snd-Book Light'), local('GE-Snd-Book-Light'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('GE-Snd-Book'), local('GE-Snd-Book-Regular'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: local('GE-Snd-Book Medium'), local('GE-Snd-Book-Medium'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: local('GE-Snd-Book Bold'), local('GE-Snd-Book-Bold'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'GE-Snd-Book';
+    font-style: normal;
+    font-weight: 900;
+    font-display: swap;
+    src: local('GE-Snd-Book Black'), local('GE-Snd-Book-Black'), url(../fonts/GE-Snd-Book.ttf) format('ttf');
+}
+
 head, body{
     height: 100%;
 }
 
 body {
-    font-family: "Noto Naskh Arabic", verdana, Times, serif!important;
+    font-family: "GE-Snd-Book"!important;
     direction: rtl;
 }
 
@@ -14,7 +109,7 @@ body {
     background-size: cover;
   }
 .header .navbar{
-    background-color: #222222;
+    background-color: #222222!important;
 }
 .nav-item.active {
     border-bottom: 6px solid #00d9b5;
@@ -36,15 +131,16 @@ body {
 
 .dropdown-item {
     color:#fff;
+    padding-left: 50px;
 
 }
 
 .dropdown-item:focus, .dropdown-item:hover {
     color:#fff;
-    background-color: #222222;
+    background-color: #2b2b2b;
 }
 
-.navbar-light .navbar-nav .show>.nav-link {
+.navbar .navbar-nav .show>.nav-link {
     color: #fff;
 }
 
@@ -61,20 +157,22 @@ body {
     left: 70%;
 }
 
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-item:hover {
+.navbar .navbar-nav .nav-link:focus, .navbar .navbar-nav .nav-item:hover {
     background-color: #00d9b5;
 
 }
 
-.navbar-light .navbar-nav .nav-link {
+.navbar .navbar-nav .nav-link {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.navbar .navbar-nav .nav-link:focus, .navbar .navbar-nav .nav-link:hover {
     color: #fff;
 }
 
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-    color: #fff;
-}
-
-.navbar-light .navbar-nav .active>.nav-link {
+.navbar .navbar-nav .active>.nav-link {
     color: #00d9b5;
 }
 
@@ -96,7 +194,7 @@ body {
     color: white;
   }
 
-  .carousel-content h2, .content h2{
+  .carousel-content h2, .content object{
     color: white;
     font-weight: 700;
     font-size: 20px;
@@ -137,13 +235,15 @@ body {
 }
 
 .announcement{
-    margin:15px 0;
+    margin:40px 0;
     padding: 5px 0;
     background-color: #e9e9e9;
 }
 .announcement ul li{
     margin-left:25px;
     color:#565656;
+    font-size: 15px;
+    font-weight: 600;
 }
 
 .announcement ul li::before{
@@ -161,6 +261,27 @@ body {
     font-size: 18px;
     font-weight: 500;
     color:#373737;
+}
+
+.navbar-nav .nav-link:hover {
+    background-color: #00d9b5;
+    color:#304e48!important;
+}
+
+.nav-link{
+    font-size: 18px;
+    font-weight:400!important;
+}
+.nav-link:focus, .nav-link:hover {
+    background-color: #00d9b5;
+    color: #304e48!important;
+}
+
+.carousel-control-next > div, .carousel-control-prev > div {
+    border-radius: 50%;
+    background-color: white;
+    padding: 5px;
+
 }
 
 @media (min-width: 768px) {
